# ebook-crop

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY-CHT.md  HISTORY.md  LICENSE  README-CHT.md  README.md  SECURITY-CHT.md  SECURITY.md  config-sample.toml  config.toml  pyproject.toml
.cursor/rules/: commit-conventions.mdc
.github/: GITHUB_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_en.md  config.yml  feature_request.md  feature_request_en.md
.github/workflows/: ci.yml
docs/: GITHUB_INTEGRATION.md  README.md  ROADMAP.md  TECHNICAL_ANALYSIS.md
docs-cht/: CONTRIBUTING-CHT.md  HISTORY-CHT.md  README.md  ROADMAP.md  SECURITY-CHT.md  TECHNICAL_ANALYSIS.md
ebook_crop/: __init__.py  automargin.py  cli.py  config.py  console.py  crop.py  i18n.py  main.py  rotation.py  utils.py
test/input/: test_basic.toml  test_rotation.toml  test_zero_margins.toml
tests/: conftest.py  generate_samples.py  test_automargin.py  test_config.py  test_crop.py  test_edge_cases.py  test_integration.py  test_rotation.py
tests/input/: test_auto_margins.toml  test_auto_margins_offset.toml  test_units.toml
