[project]
name = "ebook-crop"
version = "1.0.0"
description = "裁切 PDF 留白區域，支援頁面旋轉任意角度，優化電子書閱讀版面"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pymupdf>=1.24.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/alexcode-cc/ebook-crop"
Repository = "https://github.com/alexcode-cc/ebook-crop"
Documentation = "https://github.com/alexcode-cc/ebook-crop#readme"

[project.scripts]
ebook-crop = "ebook_crop.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
