[project]
name = "ebook-crop"
version = "1.6.0"
description = "PDF ebook margin cropping with arbitrary-angle page rotation for optimized reading layout"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Natural Language :: Chinese (Traditional)",
]
dependencies = [
    "pymupdf>=1.24.0",
    "rich>=13.0.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/alexcode-cc/ebook-crop"
Repository = "https://github.com/alexcode-cc/ebook-crop"
Documentation = "https://github.com/alexcode-cc/ebook-crop#readme"

[project.scripts]
ebook-crop = "ebook_crop.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ebook_crop"]
omit = ["ebook_crop/main.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
